--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ span.navbar-brand {
     margin-top: 50px;
     background-color: #ffffff;
     padding-top: 50px;
+    margin-bottom: 150px;
 }
 
 .jumbotron h1 {
@@ -34,10 +35,10 @@ span.navbar-brand {
     color: #4aaaa5;
 }
 
-.container img {
+#profile-image {
     float: left;
 
-    margin: 0px 10px 10px 0;
+    margin: 0px 15px 15px 0;
 }
 
 p {
@@ -48,9 +49,26 @@ p {
     float: right;
 }
 
-.navbar-nav-ml-auto {
-    color: orange;
+.card {
+    width: 200px;
+    margin: 15px 0px 15px 0px;
+}
 
+.card-header {
+    background-color: #4aaaa5;
+}
+
+h3 {
+    text-align: center;
+    color: #ffffff;
+}
+
+.btn-primary {
+    width: 100%;
+    background-color: #4aaaa5;
+    position: absolute;
+    top: 130px;
+    border: none;
 }
 
 footer {
@@ -68,8 +86,3 @@ footer p {
     text-align: center;
 }
 
-.portfolio-label {
-    background-color: #4aaaa5;
-    width: 200px;
-    margin-bottom: 20px;
-}
